homelab-v8/apps/bun-hello/devops/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bun-hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bun-hello
  template:
    metadata:
      labels:
        app: bun-hello
    spec:
      containers:
        - name: bun-hello
          image: registry.wguilherme.com/bun-hello:latest # {"$imagepolicy": "flux-system:bun-hello"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
