homelab-v8/apps/bun-hello/devops/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bun-hello
  namespace: default
spec:
  selector:
    app: bun-hello
  ports:
    - port: 80
      targetPort: 8080
