homelab-v8/apps/bun-hello/devops/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bun-hello
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: bun.brainylabs.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bun-hello
                port:
                  number: 80
